--- a/Prediction_Web/templates/train.html
+++ b/Prediction_Web/templates/train.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Train</title>
-</head>
-<body>
-    <h3>model trained</h3>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <div class="container">
+        <h1>Titanic survival prediction - train model</h1>
+
+        <div class="panel shadow">
+            Model trained and saved
+        </div>
+    </div>
+{% endblock %}
